--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emailjs/browser": "^4.4.1",
     "@supabase/supabase-js": "^2.57.4",
     "@tailwindcss/vite": "^4.1.13",
+    "@vercel/analytics": "^1.5.0",
     "dotenv": "^17.2.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
