--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,23 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Strict-Transport-Security",
+          "value": "max-age=31536000; includeSubDomains"
+        }
+      ]
+    }
+  ],
+  "redirects": [
+    {
+      "source": "http://cashvertz.com/(.*)",
+      "destination": "https://cashvertz.com/$1",
+      "permanent": true
+    }
   ]
 }
